--- a/src/style.css
+++ b/src/style.css
@@ -18,6 +18,16 @@
   top: -3px;
   font-size: 20px;
 }
+#geo-location-button {
+  position: relative;
+  top: -3px;
+  font-size: 15px;
+  border-radius: 10px;
+  text-align: center;
+  color: black;
+  background-color: #0dcaf0;
+  border: none;
+}
 h1 {
   margin-top: 100px;
   font-size: 60px;
@@ -44,11 +54,14 @@ h2 {
   position: relative;
   top: -35px;
 }
-.sunday-weather {
+.current-weather {
   font-size: 20px;
   text-align: left;
   position: relative;
   left: 160px;
+}
+#description {
+  text-transform: capitalize;
 }
 .current-conditions {
   font-size: 20px;
