--- a/src/style.css
+++ b/src/style.css
@@ -1,15 +1,17 @@
 .container {
   max-width: 600px;
   margin: 20px auto;
-  background: white;
+  background-color: lightblue;
   padding: 20px;
   border-radius: 10px;
+  display: block;
 }
 .card {
   position: relative;
   top: 10px;
   margin-left: 10px;
   margin-right: 10px;
+  background-color: lightblue;
 }
 .search-bar {
   position: relative;
@@ -28,6 +30,7 @@
 #geo-location-button {
   position: relative;
   top: -3px;
+  right: -382px;
   font-size: 15px;
   border-radius: 10px;
   text-align: center;
@@ -43,6 +46,11 @@ h1 {
 .current-temp {
   position: relative;
   left: -80px;
+}
+.current-temp-display {
+  position: relative;
+  top: -130px;
+  right: -90px;
 }
 .cloud {
   position: relative;
@@ -61,11 +69,16 @@ h2 {
   position: relative;
   top: -35px;
 }
+#current-city {
+  position: relative;
+  top: -100px;
+}
 .current-weather {
   font-size: 20px;
   text-align: left;
   position: relative;
-  left: 160px;
+  left: 10px;
+  top: -80px;
 }
 #description {
   text-transform: capitalize;
@@ -74,12 +87,18 @@ h2 {
   font-size: 20px;
   text-align: left;
   position: relative;
-  left: 250px;
+  right: -130px;
+  top: -100px;
 }
 .days {
   margin-top: 100px;
   font-size: 30px;
+  position: relative;
+  top: -200px;
 }
 body {
   font-family: "Merriweather", serif;
+  background-color: white;
+  display: block;
+  margin: 8px;
 }
