--- a/src/style.css
+++ b/src/style.css
@@ -1,80 +1,95 @@
-.container {
+body {
+  font-family: "Raleway", sans-serif;
+  background-color: white;
+  background-image: url("images/weather-photo.jpg");
+  background-position: center;
+  background-size: cover;
+  display: block;
+  margin: 0 auto;
+}
+.body-container {
   max-width: 600px;
+  max-height: 600px;
   margin: 20px auto;
-  background-color: lightblue;
+  background-color: #d7b091;
   padding: 20px;
   border-radius: 10px;
   display: block;
+  border: solid;
+  border-width: 1px;
+  border-color: black;
 }
 .card {
   position: relative;
   top: 10px;
   margin-left: 10px;
   margin-right: 10px;
-  background-color: lightblue;
+  background-color: #d7b091;
+  border: solid;
+  border-width: 1px;
+  border-color: black;
+  max-height: 70px;
 }
 .search-bar {
   position: relative;
   display: flex;
   justify-content: center;
-  font-size: 30px;
+  font-size: 20px;
 }
 .search-box {
   border-radius: 10px;
+  border: solid;
+  border-color: black;
+  border-width: 1px;
+  background-color: #d7b091;
+  color: rgb(128, 111, 111);
 }
 .btn {
-  position: relative;
-  top: -3px;
+  background-color: #7f7485;
+  border-color: #7f7485;
   font-size: 20px;
 }
 #geo-location-button {
-  position: relative;
-  top: -3px;
-  right: -382px;
-  font-size: 15px;
+  top: -35px;
+  right: -368px;
   border-radius: 10px;
   text-align: center;
   color: black;
-  background-color: #0dcaf0;
+  background-color: #7f7485;
   border: none;
 }
 h1 {
   margin-top: 100px;
-  font-size: 60px;
+  font-size: 50px;
   font-weight: bolder;
+  text-align: left;
 }
 .current-temp {
   position: relative;
   left: -80px;
 }
-.current-temp-display {
-  position: relative;
-  top: -130px;
-  right: -90px;
-}
+
 .cloud {
   position: relative;
-  top: -35px;
+  top: -30px;
 }
 h2 {
-  font-size: 55px;
+  font-size: 50px;
+  text-align: left;
 }
-#celcius {
-  font-size: 20px;
-  position: relative;
-  top: -35px;
-}
+#celcius,
 #farenheit {
   font-size: 20px;
   position: relative;
   top: -35px;
+  color: #212529;
 }
 #current-city {
   position: relative;
-  top: -100px;
+  top: -80px;
 }
 .current-weather {
-  font-size: 20px;
+  font-size: 18px;
   text-align: left;
   position: relative;
   left: 10px;
@@ -84,21 +99,26 @@ h2 {
   text-transform: capitalize;
 }
 .current-conditions {
-  font-size: 20px;
+  font-size: 18px;
   text-align: left;
-  position: relative;
-  right: -130px;
-  top: -100px;
 }
 .days {
-  margin-top: 100px;
-  font-size: 30px;
-  position: relative;
-  top: -200px;
+  font-size: 20px;
+  padding: 0;
 }
-body {
-  font-family: "Merriweather", serif;
-  background-color: white;
-  display: block;
-  margin: 8px;
+.main-display {
+  margin: 0 auto;
+  position: relative;
+  max-height: 190px;
+}
+.city {
+  max-height: 200px;
+  position: relative;
+  top: 10px;
+}
+.current-temp-display {
+  max-height: 200px;
+  position: relative;
+  top: -10px;
+  right: -50px;
 }
