--- a/src/style.css
+++ b/src/style.css
@@ -24,6 +24,10 @@ body {
   border-color: #7f7485;
   font-size: 20px;
 }
+.btn:hover {
+  background-color: #7f7485;
+  border-color: #46185f;
+}
 .card {
   position: relative;
   top: 10px;
@@ -91,6 +95,11 @@ body {
   color: black;
   background-color: #7f7485;
   border: none;
+  transition: all 150ms ease-in-out;
+}
+#geo-location-button:hover {
+  border: solid #46185f;
+  border-width: 1px;
 }
 h1 {
   margin-top: 100px;
