--- a/src/style.css
+++ b/src/style.css
@@ -6,6 +6,7 @@ body {
   background-size: cover;
   display: block;
   margin: 0 auto;
+  color: #212529;
 }
 .body-container {
   max-width: 600px;
@@ -40,11 +41,11 @@ body {
   max-height: 70px;
 }
 #celcius,
-#farenheit {
+#fahrenheit {
+  color: #212529;
   font-size: 20px;
   position: relative;
   top: -35px;
-  color: #212529;
   text-decoration: none;
 }
 .city {
@@ -93,7 +94,6 @@ body {
   right: -368px;
   border-radius: 10px;
   text-align: center;
-  color: black;
   background-color: #7f7485;
   border: none;
   transition: all 150ms ease-in-out;
