--- a/src/style.css
+++ b/src/style.css
@@ -63,6 +63,9 @@ body {
 .current-conditions {
   font-size: 18px;
   text-align: left;
+  position: relative;
+  left: 10px;
+  top: -10px;
 }
 .current-temp {
   position: relative;
@@ -117,13 +120,13 @@ footer {
 }
 h1 {
   margin-top: 100px;
-  font-size: 45px;
+  font-size: 43px;
   font-weight: bolder;
   text-align: left;
   text-transform: capitalize;
 }
 h2 {
-  font-size: 45px;
+  font-size: 43px;
   text-align: left;
 }
 #id {
