--- a/src/style.css
+++ b/src/style.css
@@ -84,9 +84,10 @@ body {
   left: 10px;
   top: -90px;
 }
-.days {
+.forecast {
   font-size: 20px;
   padding: 0;
+  text-align: center;
 }
 #description {
   text-transform: capitalize;
