--- a/src/style.css
+++ b/src/style.css
@@ -85,7 +85,7 @@ body {
   top: -90px;
 }
 .forecast {
-  font-size: 20px;
+  font-size: 22px;
   padding: 0;
   text-align: center;
 }
@@ -135,6 +135,13 @@ h2 {
   margin: 0 auto;
   position: relative;
   max-height: 190px;
+}
+.max-temp,
+.min-temp {
+  font-size: 20px;
+}
+.min-temp {
+  opacity: 0.5;
 }
 .search-bar {
   position: relative;
