--- a/src/style.css
+++ b/src/style.css
@@ -4,7 +4,7 @@
 body {
   font-family: "Raleway", sans-serif;
   background-color: white;
-  background-image: url("images/weather-photo.jpg");
+  background-image: url("images/weather-background.jpg");
   background-position: center;
   background-size: cover;
   color: #212529;
