--- a/src/style.css
+++ b/src/style.css
@@ -4,11 +4,10 @@
 body {
   font-family: "Raleway", sans-serif;
   background-color: white;
-  background-image: url("images/weather-background.jpg");
-  background-position: center;
+  background: url("images/weather-background.jpg") no-repeat fixed center;
   background-size: cover;
+  background-color: rgb(255, 255, 255);
   color: #212529;
-  background-repeat: no-repeat;
 }
 .body-container {
   max-width: 600px;
